--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,2 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Ubuntu:wght@300&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+
+body {
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 500;
+}
