--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,25 @@
 }
 
 body {
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 500;
+    color:rgb(32, 32, 32)
+}
+
+/* Logo */
+
+h1 {
+    font-family: 'Ubuntu', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: black;
+}
+
+h1 > span {
+    text-transform: capitalize;
+}
+
+#logo {
+    float: left;
+    font-size: 250%;
 }
