--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,67 +45,80 @@ header { /* set color to header */
     height: 7.5vh;
 }
 
-/* about deege */
+/* about deege section */
 
 #about-deege {
     background-color: black;
     position: absolute;
     height: max-content;
     width: 100%;
-}
-
-.float-left {
-    float: left;
-}
-
-.margin-left {
-    margin-left: 450px;
-}
-
-.float-right {
-    float: right;
-}
-
-.margin-right {
-    margin-right: 450px;
+    overflow: auto;
 }
 
 #about-deege div {
-    width: 20%;
+    width: 50%;
     height: 500px;
     display: inline-block;
 }
 
-/* about deege image */
+.column {
+    float: left;
+    width: 50%;
+}
+
+.row {
+    display: table;
+    clear: both;
+    margin-left: 25%;
+}
+
+/* about deege left content */
 
 #about-deege img {
     width: 192px;
     position: relative;
-    margin-top: 15%;
+    margin: 15% 5%;
     float: right;
     border-radius: 20px;
-}
-/*
-#avatar {
-    position: relative;
-    left: 33%;
-}
-*/
-#text-box {
-    position: relative;
-    left: 33%;
-    bottom: 200px;
+    border: 2px dashed #2b78e4;
 }
 
-.about-box {
-    display: inline-block;
+/* about deege right content */
+
+#about-deege p {
+    margin-top: 10px;
+    font-size: 18px;
+    color: rgb(155, 155, 155);
 }
 
-#avatar > img {
-    width: 256px;
-    height: 256px;
+#about-deege h2 {
+    font-size: 42px;
 }
 
-#text-box > p {
-    color: rgb(164, 164, 164);
+hr {
+    width: 70%;
+    color: whitesmoke;
+}
+
+table, th, td {
+    vertical-align: top;
+    text-align: left;
+}
+
+th {
+    border-bottom: 1px solid rgba(53, 53, 53, .8);
+}
+
+.strong {
+    font-weight: bold;
+}
+
+#quick-info {
+    background-color: white;
+    margin-top: 10px;
+    height: 70%;
+}
+
+hr {
+    width: 70%;
 }
