--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,9 @@ h1 > span {
 }
 
 header { /* set color to header */
-    background-color: rgb(33, 33, 33);
+    background-color: #3a3a3a;
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(37, 33, 51, 0.5));
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
 
 #page-header { /* set height to header */
@@ -46,8 +48,6 @@ header { /* set color to header */
 }
 
 /* about deege section */
-
-
 
 #about-deege {
     background: linear-gradient(
@@ -86,12 +86,12 @@ header { /* set color to header */
 /* about deege left content */
 
 #about-deege img {
-    width: 192px;
+    width: 256px;
     position: relative;
-    margin: 15% 5%;
+    margin: 20% 20%;
     float: right;
-    border-radius: 20px;
-    border: 2px dashed #2b78e4;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, .2);
 }
 
 /* about deege right content */
@@ -113,6 +113,7 @@ table, th, td {
 
 table {
     width: 70%;
+    border-radius: 5px;
 }
 
 th {
