--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
+    background-color: rgb(243, 237, 224);
     color:rgb(32, 32, 32)
 }
 
@@ -38,8 +39,8 @@ h1 > span {
 }
 
 header { /* set color to header */
-    background-color: #3a3a3a;
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(37, 33, 51, 0.5));
+    background-color: #0e0e0e;
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(46, 68, 67, 0.5));
     border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
 
@@ -137,3 +138,5 @@ td {
 hr {
     width: 70%;
 }
+
+/* overview */
