--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,31 +66,29 @@ header { /* set color to header */
     padding-bottom: 100px;
 }
 
-#about-deege div {
-    width: 50%;
-    height: 500px;
-    display: inline-block;
-    background-color: rgba(0, 0, 0, .4);
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
-.column {
-    float: left;
-    width: 50%;
+.container>* {
+    padding: 10px;
+    margin: 10px;
 }
 
-.row {
-    display: table;
-    clear: both;
-    margin-left: 25%;
+.image {
+    
 }
 
 /* about deege left content */
 
 #about-deege img {
     width: 256px;
-    position: relative;
+    /* position: relative;
     margin: 20% 20%;
-    float: right;
+    float: right; */
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, .2);
 }
@@ -98,7 +96,7 @@ header { /* set color to header */
 /* about deege right content */
 
 #about-deege p {
-    margin-top: 10px;
+    /* margin-top: 10px; */
     font-size: 18px;
     color: rgb(155, 155, 155);
 }
@@ -113,7 +111,7 @@ table, th, td {
 }
 
 table {
-    width: 70%;
+    /* width: 70%; */
     border-radius: 5px;
 }
 
@@ -131,7 +129,7 @@ td {
 
 #quick-info {
     background-color: white;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     height: 70%;
 }
 
