--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    background-color: rgb(243, 237, 224);
+    background-color: #f3ede0;
     color:rgb(32, 32, 32)
 }
 
@@ -78,17 +78,10 @@ header { /* set color to header */
     margin: 10px;
 }
 
-.image {
-    
-}
-
 /* about deege left content */
 
 #about-deege img {
-    width: 256px;
-    /* position: relative;
-    margin: 20% 20%;
-    float: right; */
+    width: 275px;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, .2);
 }
@@ -157,3 +150,4 @@ hr {
     border-bottom: none;
     text-decoration: none;
 }
+
