--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,22 +132,25 @@ hr {
 
 /* overview */
 
-#artist-menu {
-    position: absolute;
-    background-color: red;
-    margin: -50px 25%;
-    line-height: 75px;
-    z-index: 1;
+.container2 {
+    display: flex;
+    flex-direction: column;
+    max-width: 1500px;
+    justify-content: center;
+    align-items: center;
+    margin: 25px;
 }
 
-#artist-menu li {
-    float: left;
-    list-style-type: none;
+.container2 img {
+    width: 250px;
+    height: 250px;
+    padding: 25px;
 }
 
-#artist-menu a {
-    border: 1px solid black;
-    border-bottom: none;
-    text-decoration: none;
+.card:nth-child(2) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 700px;
+    margin: 25px;
 }
-
