fixed center position to overview and add white background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,6 @@ hr {
 .container2 {
     display: flex;
     flex-direction: column;
-    max-width: 1500px;
     justify-content: center;
     align-items: center;
     margin: 25px;
@@ -168,4 +167,18 @@ hr {
     justify-content: center;
     max-width: 700px;
     margin: 25px;
+}
+
+.bg-white {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    position: relative;
+
+    background-color: rgb(255, 255, 255);
+    top: -120px;
+    border-radius: 5px;
 }
