--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,21 @@ header { /* set color to header */
     height: 7.5vh;
 }
 
+.container-header {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 20px;
+}
+
+#menu ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#logo, #menu {
+    line-height: 75px;
+}
+
 /* about deege section */
 
 #about-deege {
