--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,12 +35,12 @@ h1 > span {
     float: left;
     font-size: 250%;
     line-height: 7.5vh;
-    margin-left: 25px;
+    padding-left: 20px;
 }
 
 header { /* set color to header */
     background-color: #0e0e0e;
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(46, 68, 67, 0.5));
+    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(46, 68, 67, 0.3));
     border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
 
@@ -56,7 +56,22 @@ header { /* set color to header */
 
 #menu ul {
     display: flex;
+    justify-content: flex-end;
     flex-wrap: wrap;
+}
+
+#menu a {
+    margin-right: 20px;
+    font-size: 150%;
+    font-weight: bold;
+    text-decoration: none;
+
+    color: rgb(170, 170, 170, .7);
+    transition: color 0.3s ease 0s;
+}
+
+#menu a:hover {
+    color: white;
 }
 
 #logo, #menu {
@@ -239,9 +254,10 @@ footer a, li {
     text-decoration: none;
     list-style-type: none;
     color: rgb(191, 191, 191);
+
+    transition: color 0.3s ease 0s;
 }
 
 footer a:hover {
-    transform: translateY(-10px);
     color: white;
 }
