--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,6 +278,44 @@ footer a:hover {
     font-style: italic;
 }
 
+#biography {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+
+    background-color: white;
+    margin: 10px 15%;
+    border-radius: 5px;
+    padding-top: 20px;
+}
+
+#biography h2 {
+    color: black;
+    padding-bottom: 20px;
+}
+
+.half {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    padding: 50px;
+    gap: 100px;
+    word-wrap: break-word;
+}
+
+.half img {
+    width: 250px;
+    max-width: 100%;
+    height: auto;
+    position: relative;
+    object-fit: cover;
+    object-position: top;
+    filter: saturate(.7);
+    padding: 10px 0;
+}
+
 /* media queries */
 
 @media screen and(min-width: 450px) {
