--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -295,25 +295,29 @@ footer a:hover {
     padding-bottom: 20px;
 }
 
-.half {
+.halves {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: flex-start;
     padding: 50px;
-    gap: 100px;
-    word-wrap: break-word;
+    gap: 20px;
 }
 
-.half img {
+.halves img {
     width: 250px;
-    max-width: 100%;
     height: auto;
     position: relative;
     object-fit: cover;
     object-position: top;
     filter: saturate(.7);
     padding: 10px 0;
+}
+
+.half {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 /* media queries */
