--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,6 @@ header { /* set color to header */
 /* about deege right content */
 
 #about-deege p {
-    /* margin-top: 10px; */
     font-size: 18px;
     color: rgb(155, 155, 155);
 }
@@ -147,7 +146,6 @@ table, th, td {
 }
 
 table {
-    /* width: 70%; */
     border-radius: 5px;
 }
 
@@ -165,7 +163,6 @@ td {
 
 #quick-info {
     background-color: white;
-    /* margin-top: 10px; */
     height: 70%;
 }
 
@@ -201,7 +198,6 @@ hr {
 }
 
 .container2 a:hover {
-    /* filter: blur(5px); */
     transform: translateY(-10px);
 }
 
@@ -297,7 +293,7 @@ footer a:hover {
 
 .halves {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
     padding: 50px;
@@ -305,7 +301,7 @@ footer a:hover {
 }
 
 .halves img {
-    width: 250px;
+    width: 100%;
     height: auto;
     position: relative;
     object-fit: cover;
@@ -317,25 +313,36 @@ footer a:hover {
 .half {
     display: flex;
     flex-direction: column;
+    width: 100%;
     gap: 10px;
 }
 
 /* media queries */
 
-@media screen and(min-width: 450px) {
+@media only screen and (min-width: 450px) {
     #logo {
         padding-left: 20px;
     }
     .container-header {
-        flex-direction: flow;
+        flex-direction: row;
     }
 }
 
-@media screen and(min-width: 630px) {
+@media only screen and (min-width: 630px) {
     #page-header {
         line-height: 7.5vh;
     }
     .container-header {
         flex-direction: row;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    .halves {
+        flex-direction: row;
+    }
+
+    .half {
+        width: 50%;
     }
 }
