--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,9 +9,9 @@
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    background: rgb(131,125,108);
+    background: #837d6c;
     background: radial-gradient(circle, rgba(131,125,108,1) 0%, rgba(0,0,0,0.9) 90%);
-    color:rgb(32, 32, 32);
+    color:rgb(14, 14, 14);
 }
 
 /* font classes */
@@ -38,7 +38,7 @@ h1 > span {
 }
 
 header { /* set color to header */
-    background-color: #0e0e0e;
+    background-color: rgb(14, 14, 14);
     background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(46, 68, 67, 0.3));
     border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
@@ -60,7 +60,7 @@ header { /* set color to header */
     font-weight: bold;
     text-decoration: none;
 
-    color: rgb(170, 170, 170, .7);
+    color: #aaaaaab3;
     transition: color 0.3s ease 0s;
 }
 
@@ -190,7 +190,7 @@ hr {
 }
 
 .container2 h1 {
-    color: black;
+    color: #000000;
 }
 
 .container2 a {
