--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Ubuntu:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Ubuntu:wght@300&display=swap'); /* import fonts from google fonts */
 
-* {
+* { /* remove default margin, padding, border */
     margin: 0;
     padding: 0;
     border: none;
 }
 
-body {
+body { /* set font for body and style */
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     background: #837d6c;
@@ -48,43 +48,43 @@ header { /* set color to header */
     justify-content: space-between;
 }
 
-#menu ul {
+#menu ul { 
     display: flex;
     justify-content: flex-end;
     flex-wrap: wrap;
 }
 
-#menu a {
+#menu a { /* style anchor descendants of id menu */
     margin-right: 20px;
     font-size: 150%;
     font-weight: bold;
     text-decoration: none;
 
     color: #aaaaaab3;
-    transition: color 0.3s ease 0s;
+    transition: color 0.3s ease 0s; /* smooth transition when changing color */
 }
 
-#menu a:hover {
+#menu a:hover { /* hover psuedo effect*/
     color: white;
 }
 
-#logo, #menu {
+#logo, #menu { /* align text to same height in nav bar */
     line-height: 75px;
 }
 
 .active {
     border-bottom: 2px solid #2b78e4;
 
-    transition: transform 0.3s ease 0s;
+    transition: border 0.3s ease 0s;
 }
 
-.active:hover {
-    border: none
+.active:hover { /* fade-out border with help of transition from above ^ */
+    border: none;
 }
 
 /* about deege section */
 
-#about-deege {
+#about-deege { /* main container for landing page */
     background: linear-gradient(
         rgba(0, 0, 0, .6),
         rgba(0, 0, 0, .6)
@@ -95,7 +95,6 @@ header { /* set color to header */
     background-position: center;
     filter: saturate(50%);
     width: 100%;
-
     overflow: hidden;
     padding-bottom: 100px;
 }
@@ -116,7 +115,6 @@ header { /* set color to header */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
     background-color: rgba(0, 0, 0, .6);
     border-radius: 5px;
 }
@@ -324,7 +322,7 @@ footer a:hover {
     border-bottom: 1px solid black;
 }
 
-/* media queries */
+/* media queries for responsive design */
 
 @media only screen and (min-width: 450px) {
     #logo {
